cmake_minimum_required(VERSION 3.17)
project(Proyecto_sistema_de_compras)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proyecto_sistema_de_compras main.cpp CManzana.cpp CManzana.h CProducto.cpp CProducto.h CFrutas.cpp CFrutas.h CVerduras.cpp CVerduras.h CZanahoria.cpp CZanahoria.h CElectrodomestico.cpp CElectrodomestico.h CTelevisor.cpp CTelevisor.h CArrocera.cpp CArrocera.h CLicuadora.cpp CLicuadora.h CPapa.cpp CPapa.h CPapaya.cpp CPapaya.h CLechuga.cpp CLechuga.h CMandarina.cpp CMandarina.h CCliente.cpp CCliente.h)